hyperoptimize migrator