@@ -3,31 +3,39 @@ package studio.resonos.nano.core.migrator;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
 import org.bukkit.World;
+import org.bukkit.command.CommandSender;
+import org.bukkit.entity.Player;
 import studio.resonos.nano.NanoArenas;
 import studio.resonos.nano.core.arena.Arena;
 import studio.resonos.nano.core.arena.impl.StandaloneArena;
-import studio.resonos.nano.core.arena.schedule.ArenaResetScheduler;
 import studio.resonos.nano.core.util.CC;
 
+import java.io.BufferedInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
+import java.io.FileInputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.concurrent.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.zip.DataFormatException;
 import java.util.zip.Inflater;
 
 public class PlatinumArenasMigration {
 
     private static final byte SECTION_SPLIT = '\u0002';
+    private static final int BUFFER_SIZE = 8192;
+    private static final ThreadLocal<Inflater> INFLATER_CACHE =
+            ThreadLocal.withInitial(Inflater::new);
 
-    public static List<Arena> migrateFromPlatinumArenas() {
+    public static List<Arena> migrateFromPlatinumArenas(Player player) {
         File pluginsFolder = NanoArenas.get().getDataFolder().getParentFile();
         File platinumArenasFolder = new File(pluginsFolder, "PlatinumArenas");
 
-        List<Arena> migratedArenas = new ArrayList<>();
+        List<Arena> migratedArenas = Collections.synchronizedList(new ArrayList<>());
 
         if (!platinumArenasFolder.exists() || !platinumArenasFolder.isDirectory()) {
             NanoArenas.get().getLogger().warning("PlatinumArenas folder not found: " + platinumArenasFolder.getPath());
@@ -48,39 +56,110 @@ public class PlatinumArenasMigration {
             return migratedArenas;
         }
 
-        Bukkit.getConsoleSender().sendMessage(CC.translate("&8[&bNanoArenas&8] &fFound " + arenaFiles.length + " PlatinumArenas arena files to migrate."));
-        Bukkit.getConsoleSender().sendMessage(CC.translate("&8[&bNanoArenas&8] &fStarting migration of PlatinumArenas arenas..."));
+        sendMessage(player, "&8[&bNanoArenas&8] &fFound " + arenaFiles.length + " PlatinumArenas arena files to migrate.");
+        sendMessage(player, "&8[&bNanoArenas&8] &fStarting migration of PlatinumArenas arenas...");
 
         long startTime = System.currentTimeMillis();
-        int successCount = 0;
+        AtomicInteger successCount = new AtomicInteger(0);
+
+        // Thread pool sized to available processors
+        int threadCount = Math.min(arenaFiles.length, Runtime.getRuntime().availableProcessors());
+        ExecutorService executor = Executors.newFixedThreadPool(threadCount);
+        List<CompletableFuture<Void>> futures = new ArrayList<>();
 
         for (File file : arenaFiles) {
-            try {
-                long fileStartTime = System.currentTimeMillis();
-                Arena arena = loadPlatinumArenaBasicInfo(file);
-                migratedArenas.add(arena);
-                successCount++;
-                Arena.getArenas().add(arena);
-                Arena.getArenaNames().add(arena.getName());
-                arena.save();
-                arena.createSchematic();
-                NanoArenas.get().getResetScheduler().schedule(arena); // add to scheduling
-                long fileDuration = System.currentTimeMillis() - fileStartTime;
-                Bukkit.getConsoleSender().sendMessage(CC.translate("&8[&bNanoArenas&8] &fMigrated arena &b" + arena.getName() + " &fin &a" + fileDuration + "ms"));
-            } catch (Exception e) {
-                NanoArenas.get().getLogger().warning("Failed to migrate arena from file: " + file.getName());
-                e.printStackTrace();
-            }
+            CompletableFuture<Void> future = CompletableFuture.runAsync(() -> {
+                try {
+                    long fileStartTime = System.currentTimeMillis();
+                    Arena arena = loadPlatinumArenaBasicInfo(file);
+
+                    // Thread-safe check and add
+                    synchronized (Arena.getArenaNames()) {
+                        if (Arena.getArenaNames().contains(arena.getName())) {
+                            sendMessage(player, "&8[&bNanoArenas&8] &cAn arena with the name '"
+                                    + arena.getName() + "' already exists. Skipping migration for this arena.");
+                            return;
+                        }
+                        Arena.getArenaNames().add(arena.getName());
+                    }
+
+                    migratedArenas.add(arena);
+                    Arena.getArenas().add(arena);
+
+                    // File I/O on async thread
+                    arena.save();
+
+                    successCount.incrementAndGet();
+
+                    long fileDuration = System.currentTimeMillis() - fileStartTime;
+                    sendMessage(player, "&8[&bNanoArenas&8] &fMigrated arena &b" + arena.getName()
+                            + " &fin &a" + fileDuration + "ms");
+
+                } catch (Exception e) {
+                    NanoArenas.get().getLogger().warning("Failed to migrate arena from file: " + file.getName());
+                    e.printStackTrace();
+                }
+            }, executor);
+
+            futures.add(future);
         }
 
+        // Wait for all migrations to complete
+        CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
+        executor.shutdown();
+
+        // Defer expensive schematic creation to async batch operation
+        Bukkit.getScheduler().runTaskAsynchronously(NanoArenas.get(), () -> {
+            for (Arena arena : migratedArenas) {
+                try {
+                    arena.createSchematic();
+                } catch (Exception e) {
+                    NanoArenas.get().getLogger().warning("Failed to create schematic for: " + arena.getName());
+                    e.printStackTrace();
+                }
+            }
+        });
+
+        // Schedule arenas on main thread (Bukkit requirement)
+        Bukkit.getScheduler().runTask(NanoArenas.get(), () -> {
+            for (Arena arena : migratedArenas) {
+                NanoArenas.get().getResetScheduler().schedule(arena);
+            }
+        });
+
         long duration = System.currentTimeMillis() - startTime;
-        Bukkit.getConsoleSender().sendMessage(CC.translate("&8[&bNanoArenas&8] &fMigrated &a" + successCount + " &farenas from &ePlatinumArenas &fin &a" + duration + "ms"));
+        long durationSeconds = duration / 1000;
+
+        if (durationSeconds < 1) {
+            sendMessage(player, "&8[&bNanoArenas&8] &aSuccessfully Migrated &b" + successCount.get()
+                    + " &aarenas from &ePlatinumArenas &ain &b" + duration + "ms");
+        } else {
+            sendMessage(player, "&8[&bNanoArenas&8] &aSuccessfully Migrated &b" + successCount.get()
+                    + " &aarenas from &ePlatinumArenas &ain &b" + durationSeconds + " seconds");
+        }
 
         return migratedArenas;
     }
 
+    private static void sendMessage(CommandSender sender, String message) {
+        String translatedMessage = CC.translate(message);
+        // Thread-safe console logging
+        Bukkit.getScheduler().runTask(NanoArenas.get(), () -> {
+            Bukkit.getConsoleSender().sendMessage(translatedMessage);
+            if (sender != null) {
+                sender.sendMessage(translatedMessage);
+            }
+        });
+    }
+
     private static Arena loadPlatinumArenaBasicInfo(File file) throws Exception {
-        byte[] readBytes = Files.readAllBytes(file.toPath());
+        byte[] readBytes;
+
+        // Buffered I/O for better performance
+        try (FileInputStream fis = new FileInputStream(file);
+             BufferedInputStream bis = new BufferedInputStream(fis, BUFFER_SIZE)) {
+            readBytes = bis.readAllBytes();
+        }
 
         if (file.getName().toLowerCase().endsWith(".datc")) {
             readBytes = decompress(readBytes);
@@ -125,23 +204,21 @@ public class PlatinumArenasMigration {
     }
 
     private static byte[] decompress(byte[] bytes) {
-        Inflater decompresser = new Inflater();
+        Inflater decompresser = INFLATER_CACHE.get();
+        decompresser.reset();
         decompresser.setInput(bytes);
 
-        try {
-            ByteArrayOutputStream outputStream = new ByteArrayOutputStream(bytes.length);
-            byte[] buffer = new byte[1024];
+        try (ByteArrayOutputStream outputStream = new ByteArrayOutputStream(bytes.length)) {
+            byte[] buffer = new byte[BUFFER_SIZE];
             while (!decompresser.finished()) {
                 int count = decompresser.inflate(buffer);
                 outputStream.write(buffer, 0, count);
             }
-            decompresser.end();
             return outputStream.toByteArray();
-        } catch (DataFormatException e) {
+        } catch (Exception e) {
             e.printStackTrace();
-            decompresser.end();
+            return null;
         }
-        return null;
     }
 
     private static int indexOf(byte[] array, byte value) {
